# PlaiY

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.txt  vcpkg.json
.github/workflows/: test.yml
app/: BridgingHeader.h  project.yml
app/PlaiY.xcodeproj/: project.pbxproj
app/PlaiYTests/: ArtworkRepositoryTests.swift  BrowsePersistenceTests.swift  BrowseStoreTests.swift  LibraryItemTests.swift  LocalCatalogTests.swift  MediaArtworkViewTests.swift  NowPlayingManagerTests.swift  PlayQueueTests.swift  PlayerViewModelTests.swift  PlexBufferSettingsTests.swift  PlexCatalogClientTests.swift  ResumeStoreTests.swift  SourceConfigTests.swift  SourcesViewModelTests.swift  SubtitleOverlayViewTests.swift  TimeFormattingTests.swift  TrackInfoTests.swift  VideoDisplaySettingsStoreTests.swift  VideoDisplaySettingsTests.swift
app/PlaiYTests/Mocks/: MockPlayerBridge.swift
app/Shared/: AppSettings.swift  ArtworkRepository.swift  BlackBarDetector.swift  BridgeOperationError.swift  BrowseModels.swift  BrowsePersistence.swift  BrowseStore.swift  BrowseTheme.swift  KeychainHelper.swift  LayoutMetrics.swift  LibraryViewModel.swift  LocalCatalog.swift  NowPlayingManager.swift  PYLog.swift  PlaiYApp.swift  PlayQueue.swift  PlayerBridge.swift  PlayerBridgeProtocol.swift  PlayerViewModel.swift  PlexAuth.swift  PlexBufferSettings.swift  PlexCatalogClient.swift  ResumeStore.swift  SourceConfig.swift  SourceManagerBridge.swift  SourcesViewModel.swift  TPLog.swift  TestPlayerApp.swift  ThumbnailManager.swift  TimeFormatting.swift  TrackInfo.swift  VideoDisplaySettings.swift  VideoDisplaySettingsStore.swift
app/Shared/Metal/: ColorFilterUniformBuilder.swift  DVDebugLogger.swift  HDRUniformBuilder.swift  MetalViewCoordinator.swift
app/Shared/Views/: AddSourceView.swift  BrowseShellView.swift  ContentView.swift  DVDisplayLayerView.swift  DebugOverlayView.swift  LibraryView.swift  MediaArtworkView.swift  MediaItemView.swift  MetalPlayerView.swift  PlayQueueView.swift  PlayerControlsView.swift  PlayerView.swift  SettingsView.swift  SourceBrowserView.swift  SubtitleOverlayView.swift  TVRemoteGestureView.swift  TrackSelectionView.swift
app/TestPlayer.xcodeproj/: project.pbxproj
app/TopShelf/: ContentProvider.swift  Info.plist  TopShelf.entitlements
app/iOS/: Info.plist
app/macOS/: Info.plist
app/tvOS/: Info.plist
core/: CMakeLists.txt
core/include/: plaiy_c.h  testplayer_c.h
core/include/plaiy/: audio_engine.h  clock.h  demuxer.h  error.h  frame_queue.h  logger.h  media_library.h  media_source.h  packet_queue.h  player_engine.h  source_manager.h  spsc_ring_buffer.h  subtitle_manager.h  types.h  video_decoder.h
core/include/testplayer/: audio_engine.h  clock.h  demuxer.h  error.h  frame_queue.h  logger.h  media_library.h  packet_queue.h  player_engine.h  subtitle_manager.h  types.h  video_decoder.h
core/platform/apple/: ca_audio_output.h  ca_audio_output.mm  dv_video_output.h  dv_video_output.mm  metal_shaders.metal  metal_video_renderer.h  metal_video_renderer.mm  ns_http_client.h  ns_http_client.mm  seek_thumbnail_renderer.h  seek_thumbnail_renderer.mm  smb_media_source.h  smb_media_source.mm  spatial_audio_detector.h  spatial_audio_detector.mm  spatial_audio_output.h  spatial_audio_output.mm  vt_video_decoder.h  vt_video_decoder.mm
core/src/: audio_pipeline.cpp  audio_pipeline.h  frame_presenter.cpp  frame_presenter.h  playback_generation.h  playback_stats.cpp  playback_stats.h  player_engine.cpp  types.cpp
core/src/audio/: audio_decoder.cpp  audio_decoder.h  audio_filter.h  audio_filter_chain.cpp  audio_filter_chain.h  audio_passthrough.cpp  audio_passthrough.h  audio_resampler.cpp  audio_resampler.h  audio_tempo_filter.cpp  audio_tempo_filter.h  compressor_filter.cpp  compressor_filter.h  dialogue_boost_filter.cpp  dialogue_boost_filter.h  equalizer_filter.cpp  equalizer_filter.h  mat_framer.cpp  mat_framer.h
core/src/bridge/: plaiy_c.cpp  testplayer_c.cpp
core/src/demuxer/: ff_demuxer.cpp  ff_demuxer.h
core/src/http/: http_client.h
core/src/sources/: direct_media_source.cpp  direct_media_source.h  local_media_source.cpp  local_media_source.h  plex_media_source.cpp  plex_media_source.h  source_manager.cpp
core/src/subtitle/: ass_renderer.cpp  ass_renderer.h  pgs_decoder.cpp  pgs_decoder.h  srt_parser.cpp  srt_parser.h  subtitle_manager.cpp
core/src/sync/: clock.cpp  frame_queue.cpp  packet_queue.cpp
core/src/util/: logger.cpp
core/src/video/: deinterlace_filter.cpp  deinterlace_filter.h  dv_seek_decoder.cpp  dv_seek_decoder.h  ff_video_decoder.cpp  ff_video_decoder.h  video_decoder_factory.cpp  video_decoder_factory.h
core/tests/: CMakeLists.txt  test_audio_filter_chain.cpp  test_audio_passthrough.cpp  test_audio_pipeline.cpp  test_bridge_error_propagation.cpp  test_clock.cpp  test_error.cpp  test_filesystem_error_handling.cpp  test_frame_presenter.cpp  test_frame_queue.cpp  test_library_performance.cpp  test_packet_pts.cpp  test_packet_queue.cpp  test_playback_generation.cpp  test_playback_stats.cpp  test_plex_media_source.cpp  test_seek_thumbnail_generator.cpp  test_source_manager.cpp  test_spsc_ring_buffer.cpp  test_srt_parser.cpp
scripts/: build_core.sh  build_deps.sh  run.sh
triplets/: arm64-ios-sim.cmake  arm64-ios.cmake  arm64-tvos.cmake
